# Snake-Game-Using-SDL

./: CMakeLists.txt  README.md
cmake_modules/: FindSDL2_image.cmake
src/: BasicPlayer.cpp  BasicPlayer.h  Core.cpp  Core.h  ItemObjects.cpp  ItemObjects.h  Main.cpp  SnakeElements.cpp  SnakeElements.h
